scss/_single-project.scss
.work-wrapper {
	p {
		margin-bottom: 10px;

		&:last-child {
			margin: 0;
		}
	}

	.project-image-wrapper {
		img {
			width: 100%;
			object-fit: cover;

			@include mediumScreen {
				height: 200px;
			}
		}
	}

	.project-info {
		margin: 10px 0 0;

		@include mediumScreen {
			margin-top: 20px;
		}

		@include largeScreen {
			margin-top: 30px;
		}

		.project-info-list {
			margin-bottom: 10px;

			@include mediumScreen {
				margin-bottom: 20px;
			}

			@include largeScreen {
				margin-bottom: 30px;
				padding-right: 30px;
				margin: initial;
			}

			ul {
				@include paragraph;
				
				li {
					opacity: 50%;

					span.project-info-list-subtitle {
						font-weight: bold;
						letter-spacing: 1px;
					}
				}
			}
		}

		.project-description {
			/*column-count: 2;
			grid-gap: 30px;*/
			p:not(:last-child) {
				margin-bottom: 10px;
			}
		}
	}

	.text-wrapper {
		p:last-child {
			margin-bottom: 0;
		}

		ul, ol {
			margin: 0;

			@include paragraph;
		}
	} 

	.image-and-caption {
		display: grid;
		justify-content: center;

		.image-grid {
			display: flex;
			justify-content: center;
			align-items: center;

			img {
				@include mediumScreen {
					max-height: 300px;
				}
			}

			video {
				max-width: 100%;
				max-height: 500px;
			}

			/* WIDER IMAGES */
			
			&.mobile-column {
				@include onlyMobile {
					flex-flow: column;
				}
			}

			&.big {
				img {
					@include mediumScreen {
						max-height: 500px;
					}
				}
			}

			&.long {
				img {
					@include mediumScreen {
						max-width: 668px;
						max-height: none;
					}
				}
			}
		}

		.caption {
			margin-top: 10px;
			/*max-width: fit-content;*/

			&:not(:last-child) {
				margin-bottom: 20px;
			}

			p {
				text-align: center;
				font-style: italic;
				opacity: .5;
				margin: 0;
			}
		}
	}
}

/* MASONRY STUFF */

.masonry {
	display: flex;
	flex-wrap: wrap;
	grid-gap: 20px;

	.single-image-wrapper {
		@include mediumScreen {
			flex: 1 0 auto;
		}

		img {
			@include mediumScreen {
				object-fit: cover;
				width: 100%;
				height: 300px;
			}
		}
	}
}

